Fix scrollbar issues
Closes #10.

--- a/styles/details.less
+++ b/styles/details.less
@@ -2,8 +2,6 @@
   display: none;
 
   .content {
-    overflow-y: scroll;
-
     .back-button {
       display: block;
       color: @gray;
